--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 pythonpath = src
 markers =
+    api: API tests
+    ui: UI tests
     smoke: critical tests
-    regression: full regression suite
-    flaky: unstable tests
