adding workflow code

--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -44,3 +44,9 @@ jobs:
         run: |
           source venv/bin/activate
           pytest -m api -v
+      - name: Run Performance tests
+        run: |
+          source venv/bin/activate
+          export PYTHONPATH=$PYTHONPATH:src
+          pytest -m performance -v
+    
